Fixed issue in burnToken permissions. Added doc strings to return payloads.
