# docs/swagger.yaml
@@ -7,28 +7,33 @@ definitions:
     type: object
   controllers.CreateOrderResponse:
     properties:
-      address:
-        type: string
       contractAddress:
+        description: The address of the contract that manages this token
         type: string
       message:
+        description: The ID of the delivery token. A tokenId is unique within a given
+          contract.
         type: string
       orderId:
+        description: The unique ID of the order
         type: string
     type: object
   controllers.OrderStatusResponse:
     properties:
       status:
+        description: indicates the actual resulting status of the order
         type: string
     type: object
   controllers.OrderUpdateRequest:
     properties:
       status:
+        description: indicates the desired new status of the order
         type: string
     type: object
   controllers.TokenOwnerResponse:
     properties:
       owner:
+        description: The ethereum address of the token holder
         format: address
         type: string
     type: object
